# mpvRx

./: .gitignore  CHANGELOG.md  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/hdr-toys/tone-mapping/: bt2390.glsl  linear.glsl  reinhard.glsl  st2094-10.glsl
app/src/main/assets/shaders/hdr-toys/transfer-function/: bt1886.glsl  bt1886_inv.glsl  bt709.glsl  bt709_inv.glsl  hlg.glsl  hlg_inv.glsl  pq.glsl  pq_inv.glsl  srgb.glsl  srgb_inv.glsl
app/src/main/assets/shaders/hdr-toys/utils/: edge_detection.glsl  exposure.glsl  invert.glsl  range.glsl  range_inv.glsl  transform.glsl
app/src/main/assets/ytdl/: setup.py  wrapper
app/src/main/cpp/: CMakeLists.txt  ytdl_wrapper.c
app/src/main/java/app/gyrolet/mpvrx/: App.kt  MainActivity.kt
app/src/main/java/app/gyrolet/mpvrx/di/: DomainModule.kt  PreferencesModule.kt
app/src/main/java/app/gyrolet/mpvrx/preferences/: AiPreferences.kt  AppearancePreferences.kt  BrowserPreferences.kt  DecoderPreferences.kt  PlayerPreferences.kt  SubtitlesPreferences.kt  YtdlPreferences.kt
app/src/main/java/app/gyrolet/mpvrx/repository/: IntroDbRepository.kt
app/src/main/java/app/gyrolet/mpvrx/util/: RuntimeManager.kt  YTDLPUtil.kt
app/src/main/java/app/marlboroadvance/mpvex/preferences/: AppearancePreferences.kt
app/src/main/res/drawable/: translate_24.xml
app/src/main/res/values/: strings.xml
fastlane/metadata/android/en-US/changelogs/: 133.txt
gradle/: libs.versions.toml
(+141 files in other folders)
